Fix global spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ body {
 }
 
 .spacer {
-    height: 60vh;
+    height: 65vh;
 }
 
 .info-section {
